tests/fails/f18.t
if not require("fail") then return end

terra foo()
    return nil + 1 
end
foo()
